--- a/includes/home/slideshow.html
+++ b/includes/home/slideshow.html
@@ -1,13 +1,13 @@
 <div id="carousel1" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
   <div class="carousel-item active">
-     <img class="formato" src="../SistemaFederacionArbritos/Assets/img/slideshow01.png" alt="" >
+     <img class="formato" src="http://grupo2.proyectosoftware.com/Assets/img/slideshow01.png" alt="" >
   </div>
   <div class="carousel-item">
-     <img class="formato" src="../SistemaFederacionArbritos/Assets/img/slideshow02.jpeg" alt=""  >
+     <img class="formato" src="http://grupo2.proyectosoftware.com/Assets/img/slideshow02.jpeg" alt=""  >
   </div>
   <div class="carousel-item">
-     <img class="formato" src="../SistemaFederacionArbritos/Assets/img/slideshow03.jpeg" alt="" >
+     <img class="formato" src="http://grupo2.proyectosoftware.com/Assets/img/slideshow03.jpeg" alt="" >
   </div>
   </div>
   
